; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_cs47l92.c_cs47l92_component_probe.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_cs47l92.c_cs47l92_component_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }
%struct.cs47l92 = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, %struct.madera* }
%struct.madera = type { i32, i32, i32 }

@CS47L92_MONO_OUTPUTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"HAPTICS\00", align 1
@madera_adsp_rate_controls = common dso_local global i32 0, align 4
@CS47L92_NUM_ADSP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*)* @cs47l92_component_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cs47l92_component_probe(%struct.snd_soc_component* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_soc_component*, align 8
  %4 = alloca %struct.cs47l92*, align 8
  %5 = alloca %struct.madera*, align 8
  %6 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %3, align 8
  %7 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %8 = call %struct.cs47l92* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %7)
  store %struct.cs47l92* %8, %struct.cs47l92** %4, align 8
  %9 = load %struct.cs47l92*, %struct.cs47l92** %4, align 8
  %10 = getelementptr inbounds %struct.cs47l92, %struct.cs47l92* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load %struct.madera*, %struct.madera** %11, align 8
  store %struct.madera* %12, %struct.madera** %5, align 8
  %13 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %14 = load %struct.madera*, %struct.madera** %5, align 8
  %15 = getelementptr inbounds %struct.madera, %struct.madera* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @snd_soc_component_init_regmap(%struct.snd_soc_component* %13, i32 %16)
  %18 = load %struct.madera*, %struct.madera** %5, align 8
  %19 = getelementptr inbounds %struct.madera, %struct.madera* %18, i32 0, i32 0
  %20 = call i32 @mutex_lock(i32* %19)
  %21 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %22 = call i32 @snd_soc_component_get_dapm(%struct.snd_soc_component* %21)
  %23 = load %struct.madera*, %struct.madera** %5, align 8
  %24 = getelementptr inbounds %struct.madera, %struct.madera* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  %25 = load %struct.madera*, %struct.madera** %5, align 8
  %26 = getelementptr inbounds %struct.madera, %struct.madera* %25, i32 0, i32 0
  %27 = call i32 @mutex_unlock(i32* %26)
  %28 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %29 = call i32 @madera_init_inputs(%struct.snd_soc_component* %28)
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %1
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %2, align 4
  br label %61

34:                                               ; preds = %1
  %35 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %36 = load i32, i32* @CS47L92_MONO_OUTPUTS, align 4
  %37 = call i32 @madera_init_outputs(%struct.snd_soc_component* %35, i32 %36)
  store i32 %37, i32* %6, align 4
  %38 = load i32, i32* %6, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %34
  %41 = load i32, i32* %6, align 4
  store i32 %41, i32* %2, align 4
  br label %61

42:                                               ; preds = %34
  %43 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %44 = call i32 @snd_soc_component_disable_pin(%struct.snd_soc_component* %43, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %45 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %46 = load i32, i32* @madera_adsp_rate_controls, align 4
  %47 = load i32, i32* @CS47L92_NUM_ADSP, align 4
  %48 = call i32 @snd_soc_add_component_controls(%struct.snd_soc_component* %45, i32 %46, i32 %47)
  store i32 %48, i32* %6, align 4
  %49 = load i32, i32* %6, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %42
  %52 = load i32, i32* %6, align 4
  store i32 %52, i32* %2, align 4
  br label %61

53:                                               ; preds = %42
  %54 = load %struct.cs47l92*, %struct.cs47l92** %4, align 8
  %55 = getelementptr inbounds %struct.cs47l92, %struct.cs47l92* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 0
  %57 = load i32*, i32** %56, align 8
  %58 = getelementptr inbounds i32, i32* %57, i64 0
  %59 = load %struct.snd_soc_component*, %struct.snd_soc_component** %3, align 8
  %60 = call i32 @wm_adsp2_component_probe(i32* %58, %struct.snd_soc_component* %59)
  store i32 %60, i32* %2, align 4
  br label %61

61:                                               ; preds = %53, %51, %40, %32
  %62 = load i32, i32* %2, align 4
  ret i32 %62
}

declare dso_local %struct.cs47l92* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1

declare dso_local i32 @snd_soc_component_init_regmap(%struct.snd_soc_component*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @snd_soc_component_get_dapm(%struct.snd_soc_component*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @madera_init_inputs(%struct.snd_soc_component*) #1

declare dso_local i32 @madera_init_outputs(%struct.snd_soc_component*, i32) #1

declare dso_local i32 @snd_soc_component_disable_pin(%struct.snd_soc_component*, i8*) #1

declare dso_local i32 @snd_soc_add_component_controls(%struct.snd_soc_component*, i32, i32) #1

declare dso_local i32 @wm_adsp2_component_probe(i32*, %struct.snd_soc_component*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
